# eugenetriguba.github.io

./: .gitignore  404.html  CNAME  archives.html  authors.html  categories.html  index.html  pelicanconf.py  publishconf.py  pyproject.toml  tags.html  tasks.py
assets/css/: main.css  normalize.css
assets/fonts/inter/: font.css
content/: test.rst
content/pages/: 404.md
feeds/: all.atom.xml
theme/static/fonts/: font.css
